# server/docs/swagger.json
@@ -1454,10 +1454,19 @@
                 "accountId": {
                     "type": "string"
                 },
+                "accountName": {
+                    "type": "string"
+                },
                 "orgId": {
                     "type": "string"
                 },
+                "orgName": {
+                    "type": "string"
+                },
                 "projectId": {
+                    "type": "string"
+                },
+                "projectName": {
                     "type": "string"
                 }
             }
